# nyanlang

./: CMakeLists.txt  LICENSE  README.md  main.cpp
nyanlang/nyan_components/: component.hpp  component_properties.hpp  loop.cpp  loop.hpp  operations.hpp
nyantools/parser/: file_tree.cpp  file_tree.hpp  nyan_parser.hpp
nylang/ny_components/: component.hpp  component_properties.hpp  loop.cpp  loop.hpp
nytools/parser/: file_tree.cpp  file_tree.hpp  parser.cpp  parser.hpp
tests/: test.nylg
